<resources>
    <string name="icon_layout" translatable="false">layout icon</string>
    <string name="icon_linkedin" translatable="false">LinkedIn icon</string>
    <string name="icon_twitter" translatable="false">Twitter icon</string>
    <string name="icon_google_plus" translatable="false">Google plus icon</string>
    <string name="icon_instagram" translatable="false">Instagram icon</string>
    <string name="icon_facebook" translatable="false">Facebook icon</string>
    <string name="app_name" translatable="false">RankStop</string>
    <string name="facebook_app_id" translatable="false">181280639373362</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb181280639373362</string>
    <string name="title_activity_container" translatable="false">RankStop</string>
    <string name="fb_text" translatable="false">Facebook</string>
    <string name="gl_text" translatable="false">Google</string>
    <string name="linkedin_text" translatable="false">Linkedin</string>
    <string name="server_date_format" translatable="false">yyyy-MM-dd</string>
    <string name="hint_twitter" translatable="false">Twitter</string>
    <string name="hint_google" translatable="false">Google</string>
    <string name="hint_linkedin" translatable="false">LinkedIn</string>
    <string name="hint_facebook" translatable="false">Facebook</string>
    <string name="hint_instagram" translatable="false">Instagram</string>
    <string name="default_notification_channel_id" translatable="false">my_channel_01</string>
    <string name="title_home">Home</string>
    <string name="title_add_item">Add item</string>
    <string name="title_my_evals">My evaluations</string>
    <string name="title_profile">Profile</string>
    <string name="hint_email">E-mail</string>
    <string name="btn_sign_up_text">Sign Up</string>
    <string name="text_settings">Settings</string>
    <string name="text_edit_profile">Edit profile</string>
    <string name="notifications">Notifications</string>
    <string name="evals_title">Evaluations</string>
    <string name="comments_title">Comments</string>
    <string name="pics_title">Pictures</string>
    <string name="text_page_owned">Page owned</string>
    <string name="text_more">more</string>
    <string name="text_page_created">Page created</string>
    <string name="text_page_followed">Page followed</string>
    <string name="text_page_top_ranked">Top ranked</string>
    <string name="text_page_top_viewed">Top viewed</string>
    <string name="text_page_top_commented">Top commented</string>
    <string name="text_page_top_followed">Top followed</string>
    <string name="next_btn">next</string>
    <string name="cancel_btn">Back</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="login_dialog_empty_password">Password must contain at least 6 characters</string>
    <string name="login_dialog_invalid_password">password. Please try again!</string>
    <string name="register_dialog_matching_password">Passwords are not matching</string>
    <string name="add_review">Add review</string>
    <string name="add_item">Add Page</string>
    <string name="welcome">Welcome back</string>
    <string name="forgot_pwd">Forgot your password</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="transition_title">transition_title</string>
    <string name="transition_pie">transition_pie</string>
    <string name="sign_up_email_format_invalid">Invalid email format</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_description">Description</string>
    <string name="hint_item_address">Address</string>
    <string name="text_add_item">Add</string>
    <string name="text_category">Category</string>
    <string name="hint_review_comment">Comment</string>
    <string name="text_history">History</string>
    <string name="text_logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="title_add_review">Add review</string>
    <string name="text_contact">Contact</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="off_line">You are currently offline</string>
    <string name="error">Error</string>
    <string name="login_show_eval">Login to see your evaluations</string>
    <string name="search_items">Search items and evaluate them</string>
    <string name="no_item_evaluated">There is no item evaluated</string>
    <string name="ok">OK</string>
    <string name="alert_login_to_follow">Login to follow this item</string>
    <string name="alert_login_to_add_review">Login to evaluate this item</string>
    <string name="already_followed">You are already following this item</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="add_item_pix">Add pictures</string>
    <string name="update_item_pics">Edit the gallery</string>
    <string name="report_abuse">Report abuse</string>
    <string name="alert_login_to_report_abuse">Login to report abuse</string>
    <string name="update_item_title">Edit item</string>
    <string name="save_changes">Save changes</string>
    <string name="improve_review_pix">Enrich your review by adding pictures</string>
    <string name="add_pix">Enrich your item page with photos (max 5)</string>
    <string name="take_pix">Take picture</string>
    <string name="gallery">Gallery</string>
    <string name="category_title">Categories:</string>
    <string name="items_title">Items:</string>
    <string name="add_comments">Add comment</string>
    <string name="add_pics_text">Add pictures</string>
    <string name="add_pics_btn">Add pictures</string>
    <string name="profile_pix">Profile picture</string>
    <string name="btn_edit">Edit</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_username">Username</string>
    <string name="use_c_location">Use current location</string>
    <string name="single_review">review</string>
    <string name="multiple_review">reviews</string>
    <string name="single_follower">follower</string>
    <string name="multiple_follower">followers</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="text_search_home_header">what are you looking for ?</string>
    <string name="start_with_rs">Start with</string>
    <string name="or_connect_with">or connect with</string>
    <string name="text_btn_login">Login</string>
    <string name="title_search">Search</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="undefined">not set</string>
    <string name="hint_nom">FirstName</string>
    <string name="hint_first_name">LastName</string>
    <string name="no_history">no history</string>
    <string name="close">Close</string>
    <string name="about_item">Read more</string>
    <string name="posted_by">Posted by</string>
    <string name="public_name">Display name:</string>
    <string name="public_name_value">FullName</string>
    <string name="hint_birthday_value">DD/MM/YYYY</string>
    <string name="hint_man">Male</string>
    <string name="hint_woman">Female</string>
    <string name="title_gender">Gender:</string>
    <string name="description_public_name">Info: The display name will be shown on your comments and pictures</string>
    <string name="hint_full_name">FullName</string>
    <string name="hint_message">Message</string>
    <string name="hint_company">Company</string>
    <string name="btn_submit_request">Submit</string>
    <string name="ownership_open">Ownership: still open</string>
    <string name="ownership_official">Ownership: official owner</string>
    <string name="ownership_pending">Ownership: Request Pending</string>
    <string name="alert_login_to_send_req_ownership">Please login first to request the item page ownership</string>
    <string name="choose_reason">Choose a reason</string>
    <string name="read_more">read more</string>
    <string name="remove_comment">Remove comment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_delete_comment">Do you really want to delete this comment ?</string>
    <string name="message_delete_picture">Do you really want to delete this photo ?</string>
    <string name="edit_pwd">Change password</string>
    <string name="hint_old_pwd">Old password</string>
    <string name="hint_new_pwd">New password</string>
    <string name="hint_confirm_new_pwd">Confirm password</string>
    <string name="date_format">MM-dd-yyyy</string>
    <string name="username_text">UserName</string>
    <string name="fullname_text">FullName</string>
    <string name="hint_subject">Subject</string>
    <string name="connectez_vous">You must login first to create an item page</string>
    <string name="field_required">This field is required</string>
    <string name="no_value_changed">No changes were made</string>
    <string name="no_eval_message">You should evaluate at least 3 criterias</string>
    <string name="my_eval_value">My evaluation</string>
    <string name="message_received">Your message is successfully sent</string>
    <string name="score_of_5">\n out of 5</string>
    <string name="note_eval_title">Evaluation Score:</string>
    <string name="old_pwd_error">Old password incorrect</string>
    <string name="my_pix">My pictures:</string>
    <string name="other_pix">Other pictures:</string>
    <string name="text_all">All</string>
    <string name="text_good">Good</string>
    <string name="text_neutral">Ok</string>
    <string name="text_bad">Not Good</string>
    <string name="other_comments">Other comments:</string>
    <string name="my_comments">My comments:</string>
    <string name="email_format_incorrect">Incorrect email format</string>
    <string name="request_received">We have received your request</string>
    <string name="text_request_ownership">Request Ownership</string>
    <string name="use_fb_login_msg">Please use your facebook account to login</string>
    <string name="no_item_created">If you want to evaluate any product, shop, brand, doctor and you don\'t find it in Rankstop database, please add it and be the first to evaluate it.</string>
    <string name="contact_ownership">If you want to request the ownership of an item page having no current owner, please contact us.</string>
    <string name="contact_us_ownership">Contact us</string>
    <string name="cancel_edit_pwd">Cancel password change</string>
    <string name="social_network">Social networks</string>
    <string name="item_updated_successfully_msg">Item updated successfully</string>
    <string name="max_photo_msg">photos maximum.</string>
    <string name="be_the_first">Not yet evaluated,\nbe the first to evaluate this item.</string>
    <string name="loading_msg">Loading ...</string>
    <string name="english">English</string>
    <string name="french">Frensh</string>
    <string name="german">German</string>
    <string name="no_item_fetched">No item avaialable</string>
    <string name="langue_title">Language:</string>
    <string name="no_comments">Could you please share with us your experience with</string>
    <string name="no_pix_part1">Could you please share with us your experience with</string>
    <string name="no_pix_part2">by adding pictures.</string>
    <string name="picture_deleted_successfully">Picture deleted successfully</string>
    <string name="msg_connect_history">Login to check your activities</string>
    <string name="profil">Profile</string>
    <string name="text_link">Website link</string>
</resources>