<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/history"
        android:title="@string/text_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting"
        android:title="@string/text_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact"
        android:title="@string/text_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/text_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:title=""
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profil"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/profil"
        app:showAsAction="ifRoom" />

</menu>