<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/filter_toggle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/all_comment"
        android:background="@drawable/rs_filter_view_gray"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/mlr_card_view"
        android:layout_marginEnd="@dimen/mlr_card_view"
        android:layout_gravity="end">

        <RadioButton
            android:id="@+id/all_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/toggle_all_bg"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/text_all"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/good_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_good_bg"
            android:button="@null"
            android:padding="2dp"
            android:gravity="center"
            android:text="@string/text_good"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:textColor="@color/colorGreenPie" />
        <RadioButton
            android:id="@+id/neutral_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_neutral_bg"
            android:button="@null"
            android:padding="2dp"
            android:gravity="center"
            android:text="@string/text_neutral"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:textColor="@color/colorOrangePie" />
        <RadioButton
            android:id="@+id/bad_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_bad_bg"
            android:button="@null"
            android:padding="2dp"
            android:gravity="center"
            android:text="@string/text_bad"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:textColor="@color/colorRedPie" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_my_pix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:minHeight="170dp">

            <rankstop.steeringit.com.rankstop.customviews.RSTVSemiBold
                android:id="@+id/title_my_pix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_pix"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/m_activity"
                android:layout_marginStart="@dimen/m_activity"
                android:layout_marginBottom="@dimen/m_activity"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_my_pix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_my_pix"/>

            <LinearLayout
                android:id="@+id/ll_add_pix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <rankstop.steeringit.com.rankstop.customviews.RSTVRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pics_text"
                    android:gravity="center"/>

                <rankstop.steeringit.com.rankstop.customviews.RSBTNMedium
                    android:id="@+id/btn_add_pix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pics_btn"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/mp_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <rankstop.steeringit.com.rankstop.customviews.RSTVSemiBold
                android:id="@+id/title_other_pix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_pix"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/m_activity"
                android:layout_marginStart="@dimen/m_activity"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/m_activity"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_pics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title_other_pix"/>

            <ProgressBar
                android:id="@+id/main_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
