<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/rs_toolbar" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:id="@+id/rv_history"
        android:visibility="gone"/>

    <com.steeringit.rankstop.customviews.RSTVMedium
        android:id="@+id/tv_no_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/no_history"/>

    <com.steeringit.rankstop.customviews.RSTVRegular
        android:id="@+id/tv_msg_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/msg_connect_history"
        android:padding="@dimen/m_activity"
        android:visibility="gone"/>
    <com.steeringit.rankstop.customviews.RSBTNBold
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/connect"
        android:layout_below="@id/tv_msg_connect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mt_btn_connect"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_width"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>